# suricata

./: Makefile.am  configure.ac  suricata.yaml.in
.github/workflows/: builds.yml
doc/userguide/: conf.py
doc/userguide/configuration/: suricata-yaml.rst
dpdk/: Makefile  Makefile.am
dpdk/prefilter/: Makefile.am  conf.yaml  dev-conf-suricata.c  dev-conf-suricata.h  dev-conf.c  dev-conf.h  device-configurer.c  device-configurer.h  hash-table-bypass.c  hash-table-bypass.h  hs-prefilter.c  hs-prefilter.h  lcore-state.c  lcore-worker-suricata.c  lcore-worker-suricata.h  lcore-worker.c  lcore-worker.h  lcores-manager.c  lcores-manager.h  logger-basic.c  logger.c  logger.h  metadata-http.c  metadata-http.h  metadata-l3-ipv4.c  metadata-l3-ipv4.h  metadata-l3-ipv6.c  metadata-l3-ipv6.h  metadata-l4-tcp.c  metadata-l4-tcp.h  metadata-l4-udp.c  metadata-l4-udp.h  metadata.c  metadata.h  prefilter-util-mpm-hs.c  prefilter-util-mpm-hs.h  prefilter.c  prefilter.h  stats.c  stats.h  (+2 more)
etc/: schema.json
rust/src/detect/: mod.rs
src/: Makefile.am  app-layer-ftp.c  app-layer-parser.c  decode-ipv4.c  decode-ipv6.c  decode-tcp.c  decode-udp.c  decode.c  decode.h  detect-engine-frame.c  detect-engine-mpm.c  detect-engine-payload.c  detect-engine-prefilter.c  detect.c  detect.h  flow-bypass.c  flow-bypass.h  flow-hash.c  flow-hash.h  flow-manager.c  flow-private.h  flow-timeout.c  flow-util.c  flow-worker.c  flow.c  flow.h  runmode-af-packet.c  runmode-af-xdp.c  runmode-dpdk.c  runmode-dpdk.h  runmode-erf-dag.c  runmode-erf-file.c  runmode-ipfw.c  runmode-napatech.c  runmode-netmap.c  runmode-nflog.c  runmode-nfq.c  runmode-pcap-file.c  runmode-pcap.c  runmode-pfring.c  (+25 more)
